# dotfiles

./: .env  .gitmodules  .tmux.conf  .zshrc  AddPackage.py  README.md  TODO.txt  UpdatePackge.py  add_config.sh  arch.sh  cloning_configs.sh  config.env.template  config.sh  copyall.sh  docker-compose.yml  flags.env.template  fonts.sh  ideas.md  install  install.sh  install_base.sh  installation.sh  installold.sh  linux.sh  main.py  main.sh  other.sh  plan.md  plan.txt  pyproject.toml  requirements.sh  setup  stow.sh  todo.md  utils.sh  windows.ps1
.config/nvim/: init.lua
.emacs.d/.emacs.d/: dependency.sh  early-init.el  ideas.md  init.el  todo.org
.emacs.d/.emacs.d/lisp/: options.el
corne/: config.h  docs.md  install.sh  keymap.c
docker/: docker-compose.yml
env/: .tmux.conf  .vimrc  .wezterm.lua  .zshrc
env/.config/ghostty/: config
env/.config/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
env/.config/i3/: config
env/.config/i3status/: config
env/.config/kitty/: kitty.conf
env/.config/waybar/: config.jsonc  style.css  theme.css
env/.config/wlogout/: style.css
env/.config/wofi/: style.css
ghostty/.config/ghostty/: config.ghostty  dependency.sh
nvim/.config/nvim/: README.md  lazy-lock.json
src/linux/: package.txt
src/linux/env/: .tmux.conf  .zshrc
src/windows/: hello.ps1  settings.json
tmux/: .tmux.conf
utils/: CopyMove.sh  LICENSE  NerdFontsInstaller.sh  Packages.sh  REAMDE.md  ZshInstall.sh  packages.sh
vim/: .vimrc
waybar/.config/waybar/: dependency.sh  style.css
zshrc/: .zshrc
(+65 files in other folders)
